--- a/src/app/components/navigation/navigation.component.scss
+++ b/src/app/components/navigation/navigation.component.scss
@@ -117,6 +117,7 @@
       outline: 2px solid var(--primary-light);
       outline-offset: 2px;
     }
+  }
 
       &.admin-link {
         background: linear-gradient(135deg, #e74c3c, #c0392b);
