--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -9,6 +9,7 @@
     <div class="nav-links">
       <!-- Main navigation links -->
       <a routerLink="/services" class="nav-link" routerLinkActive="active">Services</a>
+      <a routerLink="/community" class="nav-link" routerLinkActive="active">Community</a>
       <a routerLink="/about" class="nav-link" routerLinkActive="active">About</a>
       <a routerLink="/donate" class="nav-link" routerLinkActive="active">Donate</a>
       <a routerLink="/contribute" class="nav-link" routerLinkActive="active">Contribute</a>
